# MPCHonestMajority

./: CMakeLists.txt  DNHonestMult.h  GRRHonestMult.h  HonestMultAbstract.h  MPCCommunication.cpp  MPCCommunication.h  MPCHonestMajority  Makefile  Protocol.h  ProtocolParty.h  ProtocolTimer.cpp  TemplateField.cpp  TemplateField.h  VDMTranspose.h  ZpKaratsubaElement.cpp  ZpKaratsubaElement.h  ZpMersenneIntElement.cpp  ZpMersenneIntElement.h  ZpMersenneLongElement.cpp  ZpMersenneLongElement.h  main.cpp  run_protocol.sh  testadd.txt  testadd.txtTimes1.csv  testadd.txtTimes2.csv  testadd.txtTimes3.csv  testadd.txtTimes4.csv
